# bible-io-references-py

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/bible-io-references/: references.py
src/bible-io-references/languages/: __init__.py  arabic.py  chinese.py  es.py  french.py  german.py  he.py  hebrew.py  hindi.py  indonesian.py  korean.py  portuguese.py  pt.py  russian.py  spanish.py  tagalog.py
src/bible_io_references/: __init__.py  bible_book_enums.py  language_enums.py  references.py
src/bible_io_references/languages/: __init__.py  arabic.py  german.py  hindi.py  indonesian.py  portuguese.py  quality.py
test/non_english/: test_arabic.py  test_chinese.py  test_french.py  test_german.py  test_hebrew.py  test_hindi.py  test_indonesian.py  test_korean.py  test_portuguese.py  test_russian.py  test_spanish.py  test_tagalog.py
test/ref_tests/: ref_tests.py  test_language_enums.py  test_language_term_audit.py  test_public_api.py  test_ref_parsing.py
test/ref_tests/non_english/: test_hebrew.py  test_russian.py
