[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "bible-io-references"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "mypy>=1.11",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "mypy>=1.11",
    "build>=1.4.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/bible-io-references"]
