[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "bible-io-references"
version = "1.0.1"
description = "Parse Bible verse references into structured Python objects."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = []
keywords = [
    "bible",
    "scripture",
    "reference",
    "verse",
    "parser",
    "localization",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "mypy>=1.11",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "mypy>=1.11",
    "build>=1.4.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/bible_io_references"]


